# SwissBracketMatching

./: EmaColoring.ipynb  MatchingStudy.ipynb  README.md  pyproject.toml  utils.py
data/examples/: graham_pit_example.csv  graham_pit_example_speedup.csv  reference.csv  simulated.csv
ema/: algorithm.py  analysis.py  bad_draw.json  completebipartite.py  coverings.py  good_draw.json  gtypes.py  intersection.py  plot.py
simulation/: baseline.py  bracketframe.py  protocols.py
simulation/population/: GPR_teams.csv  GPR_teams.json  Gaussian.csv  Gaussian.json  Pareto.csv  Pareto.json  Weibull.csv  Weibull.json  settings.txt
simulation/systems/: __init__.py  csmajor.py  ema.py  tiebreaker.py
