[project]
name = "swissbracketmatching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "rstt>=0.6.7.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
